--- a/README
+++ b/README
@@ -28,3 +28,29 @@ Depends on:
 - GNU getopt
   http://www.kernel.org/pub/linux/utils/util-linux/
   http://software.frodo.looijaard.name/getopt/
+- oathtool
+  http://www.nongnu.org/oath-toolkit/
+
+# my contrib
+This contribution allows password-store to store a Base32 key used for a two-factor authentication.
+For example, pw file contains the encrypted password. To insert the base32 key to the second authentication factor :
+```
+$pass insert pw -t
+Enter password for pw:
+Retype password for pw:
+```
+or
+```
+$pass insert pw.totp
+Enter password for pw:
+Retype password for pw:
+```
+To display the two-factor authentication do
+```
+$pass pw
+LeMotDePasse		#first facteur authentication
+999000			#first time otp to second factor authentication
+906475			#second time otp
+474288			#...
+256916
+```
